# oncall

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: create-release-and-publish.yml
configs/: config.docker.yaml  config.yaml
db/: dummy_data.sql  schema-update.v2.1.7-met16_2026-01-09.sql  schema-update.v2.1.7-met5_2025-12-18.sql  schema.v0.sql
src/oncall/: app.py  db.py  healthcheck.py  utils.py
src/oncall/api/v0/: audit.py  bonus_events.py  event.py  event_link.py  event_override.py  event_swap.py  events.py  events_link.py  ical.py  ical_key_detail.py  ical_key_requester.py  ical_key_team.py  ical_key_user.py  iris_settings.py  modes.py  notification_types.py  notifications.py  preview.py  public_ical.py  roles.py  roster.py  roster_suggest.py  roster_user.py  roster_users.py  rosters.py  schedule.py  schedules.py  search.py  service.py  service_oncall.py  service_teams.py  services.py  team.py  team_admins.py  team_changes.py  team_ical.py  team_iris_escalate.py  team_oncall.py  team_service.py  team_services.py  (+14 more)
src/oncall/auth/: __init__.py  login.py
src/oncall/auth/modules/: debug.py  ldap_example.py  ldap_import.py
src/oncall/scheduler/: default.py
src/oncall/ui/: __init__.py
src/oncall/ui/static/css/: incalendar.css  oncall.css
src/oncall/ui/static/js/: incalendar.js  oncall.js
src/oncall/ui/templates/: base.html  index.html
test/: test_auth.py  test_scheduler.py
